Fix text color on login page in dark mode [WAL-4870]

--- a/src/auth/LoginColumn.scss
+++ b/src/auth/LoginColumn.scss
@@ -1,3 +1,5 @@
+@import '~sass/theme/_variables.scss';
+
 .LoginColumn {
   height: 100%;
   min-height: 100vh;
@@ -14,6 +16,8 @@
   text-align: center;
   height: 100%;
   flex-grow: 1;
+
+  color: $text-color;
 }
 
 .LoginFooter {
